tests/ui/codegen/evm-ir/validation/terminator_stack_effect_mismatch.evmir
//~? ERROR: EVM IR verification failed: block 0: `return` has stack effect 0->0, expected 2->0
@module module

bb0:
  return !meta(stack=0->0)
